Attempt to fix unknown host exceptions in update checkers
Signed-off-by: KiriCattus <19393068+KiriCattus@users.noreply.github.com>